[package]
name = "syscall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.4"
riscv = { git = "https://gitee.com/rcore-os/riscv", features = ["inline-asm"] }
config = { path = "../config/config" }

[features]
supervisor = []
user = []
