[package]
name = "SCHEDULE"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
basic = { path = "../../config/basic" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
output = { path = "../../output" }
riscv = { git = "https://gitee.com/rcore-os/riscv", features = ["inline-asm"] }
loader = {path = "../../utils/loader"}
